--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ path = "src/bin/ls_load.rs"
 [dependencies]
 chrono = { version = "0.4.38", features = ["serde"] }
 glob = "0.3.1"
-pipe-trait = "0.4.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+tap = "1.0.1"
 tempfile = "3.12.0"
 toml = "0.8.19"
