Add markdown renderer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/bin/ls_load.rs"
 [dependencies]
 chrono = { version = "0.4.38", features = ["serde"] }
 glob = "0.3.1"
+pulldown-cmark = "0.12.1"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tap = "1.0.1"
