--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/bin/ls_load.rs"
 chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.17", features = ["derive"] }
 glob = "0.3.1"
+lazy_static = "1.5.0"
 liquid = "0.26.9"
 pulldown-cmark = "0.12.1"
 regex = "1.10.6"
