--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,6 @@ pulldown-cmark = "0.12.1"
 regex = "1.10.6"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+serde_yml = "0.0.12"
 tap = "1.0.1"
 tempfile = "3.12.0"
